# CCCPractice

./: CCCPractice.h  CMakeLists.txt  README.md
randomQuestions/: beacon.cpp  cleaningJob.cpp  emergencyNetwork.cpp  meteorShowers.cpp  powerSubstations.cpp  relayStation.cpp  warehouseRelocation.cpp
randomQuestions/BFSandDFS/: beaconTest.cpp  powerSubstations.cpp  warehouseRelocation.cpp
randomQuestions/differenceTables/: prefixSums.cpp  prefixSumsTest.py
randomQuestions/greedy/: eventPlanner.cpp
randomQuestions/trees/: familyTree.cpp  familyTreeTest.py  relayNetwork.cpp
senior/2019/: Question3.cpp
senior/2025/: Question1.cpp  Question2.cpp  Question3.cpp  Question4.cpp
src/: 2021pro1.cpp  2021pro4.cpp  2021pro5.cpp  2022pro1.cpp  2022pro2.cpp  2022pro3.cpp  2022pro4.cpp  2022pro5.cpp  2023pro3.cpp  2023pro4.cpp  2024pro3.cpp  2024pro4.cpp  2025pro1.cpp  2025pro2.cpp  2025pro4.cpp  2025pro5.cpp
src/2021/: 2021pro1.cpp  2021pro2.cpp  2021pro3.cpp  2021pro4.cpp
src/2022/: 2022pro4.cpp  2022pro5.cpp
src/2023/: 2023pro1.cpp  2023pro2.cpp
src/2023test/: 2023pro4.cpp  main.cpp
src/2024/: 2024pro1.cpp  2024pro2.cpp  2024pro4.cpp  2024pro5.cpp
src/2024senior/: pro1.cpp  pro2.cpp
src/2024test/: 2024que4.cpp  main.cpp  question5.cpp
src/2025/: 2025pro3.cpp  2025pro4.cpp  2025seniorpro1.cpp  2025seniorpro2.cpp  2025seniorpro3.cpp
src/2025test/: main.cpp  question3.cpp  question4.cpp  question5.cpp
src/2026senior/: question1.cpp  question3.cpp
src/2026test/: question4.cpp  question5.cpp
src/dmoj/: 16bitswonly.cpp  a3.cpp  aaaa1p1.cpp  aaaa1p2.cpp  (+2 more)
(+1 files in other folders)
