# CMakeList.txt : CMake project for CCCPractice, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("CCCPractice")

# Add source to this project's executable.
add_executable (CCCPractice  "CCCPractice.h" "src/2023pro1.cpp" "src/2023pro2.cpp" "src/2023pro3.cpp" "src/2023pro4.cpp" "src/2024pro2.cpp" "src/2024pro1.cpp" "src/2024pro4.cpp" "src/2024pro3.cpp" "src/2024pro5.cpp" "src/2025pro1.cpp" "src/2025pro2.cpp" "src/2025pro3.cpp" "src/2025pro4.cpp" "src/2025pro5.cpp")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET CCCPractice PROPERTY CXX_STANDARD 17)
endif()

# TODO: Add tests and install targets if needed.
